<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:text="@string/detailTitre"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/TextView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/nomLabel"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/TextViewEtablissement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/TextView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/proprietaireLabel"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/TextViewProprietaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/TextView08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/adresseLabel"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/TextViewAdresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/TextViewVille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/categorieLabel"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/TextViewCategorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/date_infractionLabel"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/TextViewDate_Infraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/date_jugementLabel"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/TextViewDate_Jugement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/montantLabel"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/TextViewMontant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/descriptionLabel"
        android:textSize="22sp" />
<ScrollView android:layout_height="30dp"
        android:layout_width="match_parent">
<TextView 
    android:layout_width="match_parent"
    android:id="@+id/TextViewDescription"
    android:layout_height="30dp"
    android:textSize="16sp"
  
    />
</ScrollView>
 
</TableLayout>
</ScrollView>